# chirotopes-sat

./: .gitignore  ENCODING_COMPARISON.md  LICENSE  README.md  pyproject.toml
docs/: build.sh  main.tex  refs.bib
src/chirotopes/: __init__.py  __main__.py  cli.py  cnf_utils.py  core.py  encoding.py  solver.py
src/chirotopes/data/: allowed_patterns_signotopes3.txt
tests/: conftest.py  test_core.py  test_encoding.py  test_regression.py  test_solver.py
